syntax = "proto3";

message Status {
    string status = 1;
}

message SignUpRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message SignUpResponse {
    Status status = 1;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string access_token = 1;
    string refresh_token = 2;
    Status status = 3;
}

message RefreshRequest {
    string refresh_token = 1;
}

message RefreshResponse {
    string access_token = 1;
    string refresh_token = 2;
    Status status = 3;
}

message LogoutRequest {
    string user_id = 1;
}

message LogoutResponse {
    Status status = 1;
}

message UserUpdateRequest {
    string username = 1;
    string password = 2;
}

message UserUpdateResponse {
    Status status = 1;
}

message GetUserAuthHistoryRequest {
    string user_id = 1;
}

message UserAuthHistory {
    string user_id = 1;
    string user_agent =  2;
    string auth_date = 3;
}

message GetUserAuthHistoryResponse {
    repeated UserAuthHistory history = 1;
}

service Auth {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
    rpc Refresh (RefreshRequest) returns (RefreshResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc UserUpdate (UserUpdateRequest) returns (UserUpdateResponse);
    rpc GetUserAuthHistory (GetUserAuthHistoryRequest) returns (GetUserAuthHistoryResponse);
}